syntax = "proto3";

package temporal.server.chasm.lib.worker.proto.v1;

option go_package = "go.temporal.io/server/chasm/lib/worker/gen/workerpb;workerpb";

import "temporal/api/workflowservice/v1/request_response.proto";

message RecordHeartbeatRequest {
    // Internal namespace ID (UUID).
    string namespace_id = 1;

    temporal.api.workflowservice.v1.RecordWorkerHeartbeatRequest frontend_request = 2;
}

message RecordHeartbeatResponse {
    temporal.api.workflowservice.v1.RecordWorkerHeartbeatResponse frontend_response = 1;
}
